# xai-snt-course

./: README.md  fooling_lime_shap.py  pyproject.toml  xai.ipynb  xai_copy.ipynb
