[project]
name = "xai-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "captum>=0.8.0",
    "dice-ml>=0.12",
    "ipykernel>=7.1.0",
    "lime>=0.2.0.1",
    "lxt>=2.1",
    "quantus>=0.6.0",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "xgboost>=3.1.1",
    "zennit>=1.0.0",
]
